@@ -1,6 +1,10 @@
 
 2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>
 
+	* doc/Makefile, web/Makefile: Improvements.
+
+2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>
+
 	* bin/postats-data: Order options, fix a path, whitespace tweaks.
 
 2007-05-25  Benno Schulenberg  <benno@vertaalt.nl>
